[tool.poetry]
name = "restaurant-menu"
version = "1.0.0"
description = ""
license = "MIT"
authors = ["Joffrey Bienvenu <joffreybvn@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/joffreybvn/"
homepage = "https://github.com/joffreybvn/"
keywords = []

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
